fixed versioning in toml and ref

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,10 +1,13 @@
 [project]
 name = "Vertex-CLI"
-version = "0.1.36 "
+version = "0.1.36"
 description = "A CLI tool for debugging and generating AI outputs based on prompts"
 readme = "README.md"
 authors = [
     { name = "Pratham Hole", email = "prathamhole@gmail.com" }
+]
+dependencies = [
+    "rich",
 ]
 license = { text = "BSD License" }
 keywords = ["CLI", "AI", "debugging", "prompt"]
