--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -14,7 +14,7 @@ jobs:
       - uses: actions/setup-python@v4
         with:
           python-version: 3.x
-      - uses: actions/cache@v4  # Updated from v2 to v4
+      - uses: actions/cache@v4
         with:
           key: ${{ runner.os }}-pip-${{ hashFiles('**/requirements.txt') }}
           path: ~/.cache/pip
@@ -22,4 +22,4 @@ jobs:
             ${{ runner.os }}-pip-
       - run: pip install mkdocs-material
       - run: pip install pillow cairosvg
-      - run: mkdocs gh-deploy --force
+      - run: mkdocs build --site-dir docs  # Build into docs/ instead of site/
