--- a/pyproject.toml
+++ b/pyproject.toml
@@ -26,7 +26,7 @@ Homepage = "https://github.com/Prtm2110/Vertex-CLI"
 Repository = "https://github.com/Prtm2110/Vertex-CLI"
 
 [project.optional-dependencies]
-dev = ["twine", "build", "mkdocs-material", "mkdocs-material[imaging]"]
+dev = ["twine", "build", "mkdocs-material", "mkdocs-material[imaging]", "mkdocstrings", "mkdocstrings-python"]
 
 [project.scripts]
 tex = "cli.prompt:main"
